<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/backgr2_top">

        <ImageView
            android:id="@+id/btn_Back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_arrow_back_24"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:scaleX="1.6"
            android:scaleY="1.6"/>

    </RelativeLayout>
    
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="170dp"
        app:contentPadding="8dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        app:shapeAppearance="@style/RoundedTopCorners"
        app:cardBackgroundColor="@color/white">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="30dp"
            android:paddingRight="30dp">

            <TextView
                android:id="@+id/signin"
                style="@style/SIGNIN"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:text="@string/signin" />

            <TextView
                android:id="@+id/decript2"
                style="@style/decript2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/signin"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
                android:alpha="0.8"
                android:layout_marginTop="20dp"
                android:text="@string/decript2" />

            <EditText
                android:id="@+id/etmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/decript2"
                android:layout_marginTop="50dp"
                style="@style/edt_email"
                android:autofillHints="emailAddress" />

            <EditText
                android:id="@+id/edpw"
                style="@style/edt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/etmail"
                android:layout_marginTop="30dp" />

            <LinearLayout
                android:id="@+id/rem_for"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edpw">

                <CheckBox
                    android:id="@+id/remember"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/remember"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/forgotPassword"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/forgotpassword"
                    android:textColor="@color/orange" />

            </LinearLayout>

            <Button
                android:id="@+id/signInButton"
                style="@style/btn_signin2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rem_for"
                android:layout_marginTop="40dp"
                android:text="@string/signin"
                app:backgroundTint="@null" />

            <LinearLayout
                android:id="@+id/other"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/signInButton"
                android:layout_marginTop="50dp"
                android:gravity="center"
                android:orientation="horizontal">

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:layout_weight="1"
                    android:background="@android:color/darker_gray" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="7dp"
                    android:paddingRight="7dp"
                    android:text="@string/OR"
                    android:textColor="@color/black"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_weight="1"
                    android:background="@android:color/darker_gray" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/or"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/other"
                android:gravity="center"
                android:paddingTop="10dp"
                android:paddingBottom="10dp">

                <ImageView
                    android:id="@+id/img_Google"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/google" />

                <ImageView
                    android:id="@+id/img_Fb"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="20dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/facebook" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/or"
                android:layout_marginTop="50dp"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dont_have_account"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/txt_Signup_new"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/signup"
                    android:textColor="@color/orange"
                    android:textStyle="bold" />

            </LinearLayout>

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:indeterminateTint="@color/orange"
                android:visibility="gone" />

        </RelativeLayout>

    </com.google.android.material.card.MaterialCardView>

</RelativeLayout>
